--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,6 +10,7 @@
 
     <EditText
         android:id="@+id/editTextUsername"
+        android:layout_marginTop="50dp"
         android:hint="Username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
